<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity: </string>
    <string name="price">Price</string>
    <string name="name">Name on order:</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="orderSummary">Order Summary:</string>
    <string name="orderSubtotal">Order Subtotal</string>
    <string name="quantity1">1</string>
    <string name="total">Total: </string>
    <string name="reset">Start Over</string>
    <string name="cream">Whipped Cream: </string>
    <string name="chocolate">Chocolate: </string>
    <string name="toppings">Toppings: </string>
    <string name="quantity_text_view">0</string>
    <string name="price_text_view">0</string>
    <string name="order">Order</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>
