<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="200dp"
    android:minHeight="200dp"
    tools:context="com.example.android.toojusttoojava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"
            android:hint="@string/name"
            android:ems="10"
            android:id="@+id/name_field"
            tools:text=""
            android:onClick="addName"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"
            style="@style/headings"
            android:text="@string/quantity"
            tools:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="decrement"
                android:text="@string/minus"
                tools:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/quantity1"
                android:textColor="@android:color/black"
                tools:text="@string/quantity_text_view" />

            <Button
                android:id="@+id/plus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="increment"
                android:text="@string/plus"
                tools:text="@string/plus" />

        </LinearLayout>

        <TextView
            android:id="@+id/toppings"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"
            style="@style/headings"
            android:text="@string/toppings"
            tools:text="@string/toppings" />

        <CheckBox
            android:id="@+id/checkWhipped"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addCream"
            android:text="@string/cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkChocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addChocolate"
            android:paddingBottom="16dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            style="@style/headings"
            android:text="@string/orderSummary"
            tools:text="@string/orderSummary" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/quantity1"
            android:textColor="@android:color/black"
            tools:text="@string/price_text_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textColor="@android:color/black"
                tools:text="@string/order"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetOrder"
                android:text="@string/reset"
                android:textColor="@android:color/black"
                tools:text="@string/reset"
                android:layout_weight="0"

                style="@style/Widget.AppCompat.Button" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>